build.sbt添加docker部署